--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.2.0",
     "@google/genai": "^1.29.0",
     "marked": "^17.0.0",
-    "@supabase/supabase-js": "2"
+    "@supabase/supabase-js": "2",
+    "@vitejs/plugin-react": "^5.1.1",
+    "vite": "^7.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
