--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "copy-of-copy-of-copy-of-focusflow:-ai-study-planner",
+  "name": "focus-flow-ai-study-planner",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,18 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
     "@google/genai": "^1.29.0",
+    "@supabase/supabase-js": "^2.44.2",
     "marked": "^17.0.0",
-    "@supabase/supabase-js": "2",
-    "@vitejs/plugin-react": "^5.1.1",
-    "vite": "^7.2.2"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "typescript": "^5.5.3",
+    "vite": "^7.2.2"
   }
 }
