--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
+  "env": {
+      "VITE_GEMINI_API_KEY": "gemini-api-key"
+  },
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build",
+      "use": "vercel/static-build",
       "config": {
         "installCommand": "npm install"
       }
@@ -13,10 +16,5 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "build": {
-    "env": {
-      "VITE_GEMINI_API_KEY": "gemini-api-key"
-    }
-  }
+  ]
 }
